--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -3,7 +3,7 @@
 <%= f.error_notification %>
   <div class="field">
       <div class="control">
-        <%= f.input :tweet, label: "Tweet about it..", input_html: { class: "textarea"}, wrapper: false, label_html: {class: "label"}, placeholder: "Compose a new tweet.." %>
+        <%= f.input :tweet, label: "Tweet about it..", input_html: { class: "textarea"}, wrapper: false, label_html: {class: "label"}, placeholder: "Compose a new tweet..", autofocus: true %>
       </div>
   </div>
  <%= f.button  :submit, class: "button is-info"%>
