--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -2,7 +2,12 @@
 <section class='section'>
   <div class='container'>
     <div class='columns'>
+    <% if user_signed_in? %>
+    		<%= render 'profile' %>
+    <% else %>
        <%= render 'trends' %>
+    <% end %>
+       
        <%= render 'feed' %>
        <%= render 'whot-to-follow' %>
     </div>
